language/move-lang/tests/move_check/translated_ir_tests/commands/move_before_assign.move
fun main() {
    let x;
    let y = move x;
}

// check: MOVELOC_UNAVAILABLE_ERROR
